[project]
authors = [{ name = "Jakub Jezek", email = "jakubjezek001@gmail.com" }]
name = "jeza-ynput-dev-workspace"
version = "0.1.0"
description = "My personal workspace for YNPUT development."
readme = "README.md"
requires-python = ">=3.9.19,<3.11"
dependencies = [
    "ayon-python-api>=1.0.11",
    "click>=8.1.7",
    "clique>=2.0.0",
    "pyblish>=1.7.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
]

[project.scripts]
git-clone-all-repos = "jeza_ynput_dev_workspace:git_clone_all_repos"
upload-to-addon-folder = "jeza_ynput_dev_workspace:upload_to_addon_folder"
update-ayon-docker-local-dir = "jeza_ynput_dev_workspace:update_ayon_docker_local_dir"
docs-initialize = "jeza_ynput_dev_workspace:docs_initialize"
docs-start = "jeza_ynput_dev_workspace:docs_start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

executionEnvironments = [
    { root = ".", extraPaths = [
        "ayon-docker/backend",
        "ayon-core/client",
        "ayon-launcher/.venv/lib64/python3.9/site-packages",
        "ayon-launcher/.venv/Lib/site-packages",
        "ayon-applications/client",
        "ayon-ocio/client",
        "ayon-python-api",
        "ayon-third-party/client",
        "ayon-traypublisher/client",
        "ayon-nuke/client",
        "ayon-hiero/client",
        "ayon-resolve/client",
        "ayon-flame/client",
        "ayon-circuit/client",
        "ayon-circuit/client/ayon_circuit/vendor/LabLib",
        "ayon-ftrack/client",
        "ayon-syncsketch/client",
        "ayon-shotgrid/client",
        "ayon-deadline/client",
    ] },
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
line-length = 79
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
