[project]
dependencies = [
    "aiohttp>=3.7",
    "aiohttp-middlewares>=2.0.0",
    "ayon-python-api>=1.0.11",
    "arrow>=0.17",
    "blessed>=1.17",
    "click>=8.1.7",
    "clique>=2.0.0",
    "coolname>=0.1",
    "cryptography>=39.0.0",
    "dnspython>=2.1.0",
    "enlighten>=1.9.0",
    "gitpython>=3.1.43",
    "jsonschema>=2.6.0",
    "keyring>=22.0.1",
    "opencolorio>=2.3.2,<2.4.0",
    "opentimelineio>=0.16.0",
    "pillow>=9.5.0",
    "pyblish>=1.7.0",
    "pyblish-base>=1.8.7",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python3-xlib>=0.1; sys_platform == 'linux'",
    "pywin32>=301; sys_platform == 'win32'",
    "qtawesome>=0.7.3",
    "QtPy>=2.3.0",
    "ruff>=0.8.3",
    "semver>=2.13.0",
    "six>=1.15",
    "speedcopy>=2.1",
    "unidecode>=1.2.0",
    "urllib3>=1.26.16",
    "websocket-client>=0.40.0,<2",
    "appdirs @ git+https://github.com/ActiveState/appdirs.git@master",
    "acre @ git+https://github.com/ynput/acre.git",
    "mock>=5.1.0",
    "psd-tools>=1.10.4",
]
authors = [{ name = "Jakub Jezek", email = "jakubjezek001@gmail.com" }]
name = "jeza-ynput-dev-workspace"
version = "0.1.0"
description = "My personal workspace for YNPUT development."
readme = "README.md"
requires-python = ">=3.9.19,<3.11"

[project.scripts]
git-clone-all-repos = "jeza_ynput_dev_workspace:git_clone_all_repos"
git-commit-info-extraction = "jeza_ynput_dev_workspace:git_commit_info_extraction"
upload-to-addon-folder = "jeza_ynput_dev_workspace:upload_to_addon_folder"
update-ayon-docker-local-dir = "jeza_ynput_dev_workspace:update_ayon_docker_local_dir"
docs-initialize = "jeza_ynput_dev_workspace:docs_initialize"
docs-start = "jeza_ynput_dev_workspace:docs_start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
venvPath = "."
venv = ".venv"
executionEnvironments = [
    { root = ".", extraPaths = [
        "ayon-docker/backend",
        "ayon-core/client",
        "ayon-launcher/.venv/lib64/python3.9/site-packages",
        "ayon-launcher/.venv/Lib/site-packages",
        "ayon-applications/client",
        "ayon-ocio/client",
        "ayon-python-api",
        "ayon-third-party/client",
        "ayon-traypublisher/client",
        "ayon-nuke/client",
        "ayon-hiero/client",
        "ayon-resolve/client",
        "ayon-flame/client",
        "ayon-circuit/client",
        "ayon-circuit/client/ayon_circuit/vendor/LabLib",
        "ayon-ftrack/client",
        "ayon-syncsketch/client",
        "ayon-shotgrid/client",
        "ayon-deadline/client",
    ] },
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "PTH",
    "ANN101",
    "ANN204",
    "COM812",
    "S603",
    "ERA001",
    "TRY003",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    "ARG002",
    "INP001",
    "FIX002",
    "TD003",
    "S404",
    "PLC0415",
    "CPY001",
    "UP045",
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff]
line-length = 79
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
